--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title >Library Management System</title>
     <link rel="stylesheet" href="style.css">
     <script src="library.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+
 </head>
 
 <body>
