--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   document.addEventListener('contextmenu', function(e) {
     e.preventDefault();
   });
+
+        document.addEventListener('keydown', function(e) {
+            if ((e.ctrlKey || e.metaKey) && e.shiftKey && e.key === 'I') {
+                e.preventDefault();
+            }
+        });
+        
 </script>
 
 </head>
