--- a/index.html
+++ b/index.html
@@ -62,32 +62,43 @@
 </html> 
 
  -->
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meme Mania</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <style>
     body {
       font-family: 'Comic Sans MS', 'Arial', sans-serif;
       background-color: #f0f0f0;
       margin: 0;
       padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #333;
+      text-align: center;
+      margin: 20px 0;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
     }
     .box {
       border: 3px solid #333;
-      width: 90vw; /* Wider box for larger screens */
-      max-width: 600px; /* Increased max-width for bigger images */
-      min-height: 500px; /* Increased height to accommodate larger images */
+      width: 90vw;
+      max-width: 600px;
+      min-height: 500px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
       overflow: hidden;
-      margin: 20px auto;
+      margin: 15px auto;
       border-radius: 15px;
       padding: 20px;
       background-color: #fff;
@@ -96,6 +107,12 @@
     }
     .box:hover {
       transform: scale(1.02);
+    }
+    h2 {
+      font-size: 1.5em;
+      margin: 10px 0;
+      max-width: 90%;
+      word-wrap: break-word;
     }
     button {
       margin: 10px;
@@ -117,17 +134,18 @@
       cursor: not-allowed;
     }
     img {
-      width: 100%; /* Full width of the box */
-      max-width: 550px; /* Slightly less than box width for padding */
-      max-height: 400px; /* Increased max-height for larger images */
+      width: 100%;
+      max-width: 550px;
+      max-height: 400px;
       border-radius: 8px;
-      object-fit: contain; /* Maintains aspect ratio */
+      object-fit: contain;
+      margin: 10px 0;
     }
     .loader {
       border: 4px solid #f3f3f3;
       border-top: 4px solid #ff6f61;
       border-radius: 50%;
-      width: 40px; /* Slightly larger spinner */
+      width: 40px;
       height: 40px;
       animation: spin 1s linear infinite;
       margin: 20px auto;
@@ -140,19 +158,26 @@
       color: #d32f2f;
       font-weight: bold;
       font-size: 18px;
+      margin: 10px;
     }
     .subreddit {
       font-size: 14px;
       color: #555;
-      margin-top: 10px;
+      margin: 10px 0;
     }
     select {
       margin: 10px;
       padding: 8px;
       font-size: 14px;
       border-radius: 5px;
+      width: 140px;
     }
-    /* Responsive adjustments for smaller screens */
+    .controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
     @media (max-width: 600px) {
       .box {
         width: 95vw;
@@ -160,10 +185,16 @@
       }
       img {
         max-width: 90vw;
-        max-height: 300px; /* Smaller height for mobile */
+        max-height: 300px;
+      }
+      h1 {
+        font-size: 2em;
       }
       h2 {
-        font-size: 18px; /* Smaller title on mobile */
+        font-size: 1.2em;
+      }
+      select, button {
+        width: 120px;
       }
     }
   </style>
@@ -175,14 +206,17 @@
     <h2>Click the button for a meme!</h2>
   </div>
   
-  <select id="subreddit" aria-label="Select a subreddit">
-    <option value="gimme">Random (All)</option>
-    <option value="memes">r/memes</option>
-    <option value="funny">r/funny</option>
-    <option value="dankmemes">r/dankmemes</option>
-  </select>
-  
-  <button id="btn">Get Meme!</button>
+  <div class="controls">
+    <select id="subreddit" aria-label="Select a subreddit">
+      <option value="gimme">Random (All)</option>
+      <option value="memes">r/memes</option>
+      <option value="funny">r/funny</option>
+      <option value="dankmemes">r/dankmemes</option>
+    </select>
+    
+    <button id="btn">Get Meme!</button>
+    <button id="downloadBtn" disabled>Download Meme</button>
+  </div>
 
   <script>
     const colors = ['#ffcccb', '#b0e57c', '#add8e6', '#ffd700', '#dda0dd'];
@@ -194,7 +228,9 @@
     function fetchMeme() {
       const subreddit = document.getElementById('subreddit').value;
       const btn = document.getElementById('btn');
+      const downloadBtn = document.getElementById('downloadBtn');
       btn.disabled = true;
+      downloadBtn.disabled = true;
       document.getElementById('box').innerHTML = '<div class="loader" aria-label="Loading"></div>';
       document.getElementById('box').style.backgroundColor = getRandomColor();
 
@@ -218,6 +254,7 @@
             <p class="subreddit">From <a href="${data.postLink}" target="_blank">${data.subreddit}</a></p>
           `;
           btn.disabled = false;
+          downloadBtn.disabled = false;
         })
         .catch(err => {
           document.getElementById('box').innerHTML = `
@@ -225,12 +262,35 @@
           `;
           console.error("Error:", err);
           btn.disabled = false;
+          downloadBtn.disabled = true;
           setTimeout(fetchMeme, 3000);
         });
     }
 
+    function downloadMeme() {
+      const box = document.getElementById('box');
+      const downloadBtn = document.getElementById('downloadBtn');
+      downloadBtn.disabled = true;
+
+      html2canvas(box, { scale: 2 }).then(canvas => {
+        const link = document.createElement('a');
+        link.download = `meme-${new Date().toISOString()}.png`;
+        link.href = canvas.toDataURL('image/png');
+        link.click();
+        downloadBtn.disabled = false;
+      }).catch(err => {
+        console.error("Error capturing screenshot:", err);
+        document.getElementById('box').innerHTML = `
+          <p class="error">Failed to capture meme. Try again!</p>
+        `;
+        downloadBtn.disabled = false;
+      });
+    }
+
     document.getElementById('btn').addEventListener('click', fetchMeme);
     document.getElementById('subreddit').addEventListener('change', fetchMeme);
+    document.getElementById('downloadBtn').addEventListener('click', downloadMeme);
   </script>
 </body>
 </html>
+
